--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,19 +9,21 @@ URL: https://github.com/henkelstone/NPEL.Classification.git
 BugReports: https://github.com/henkelstone/NPEL.Classification/issues
 Description: Includes functions for: inputing, massaging and cleaning up data;
     generating different classification models; generating output raster tiles;
-    plotting resuting images.
+    plotting resuting images. ???
+Depends: R (>= 2.10)
 License: GPL (>= 2)
 LazyData: TRUE
 Imports:
     raster,
-    maptools,
+    sp
 Suggests:
+    maptools,
     randomForest,
     randomForestSRC,
     FNN,
     class,
     kknn,
     gbm,
-    e1071
-    ggplot2,
+    e1071,
+    ggplot2
 RoxygenNote: 5.0.1
