--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(.buildModel)
 export(buildModel)
 export(buildPredict)
 export(classAcc)
+export(deg2rad)
 export(extractPoints)
 export(factorValues)
 export(generateModels)
@@ -67,6 +68,7 @@ export(modelAccs)
 export(npelVIF)
 export(npelVIMP)
 export(plotTile.base)
+export(rad2deg)
 export(readTile)
 export(sortLevels)
 export(trimLevels)
