--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ S3method(isCat,kknn)
 S3method(isCat,randomForest)
 S3method(isCat,rfsrc)
 S3method(isCat,svm)
+S3method(isCont,default)
 S3method(isCont,fnn.FNN)
 S3method(isCont,fnn.class)
 S3method(isCont,gbm)
@@ -78,6 +79,7 @@ export(classAcc)
 export(deg2rad)
 export(extractPoints)
 export(factorValues)
+export(fx2vars)
 export(generateModels)
 export(getArgs)
 export(getClasses)
@@ -86,10 +88,12 @@ export(getFitted)
 export(getFormula)
 export(getProb)
 export(getVIMP)
+export(impute)
 export(isCat)
 export(isCont)
 export(mergeLevels)
 export(modelAccs)
+export(modelsValid)
 export(npelVIF)
 export(npelVIMP)
 export(plotTile.base)
@@ -98,5 +102,8 @@ export(rad2deg)
 export(readTile)
 export(sortLevels)
 export(trimLevels)
+export(validate)
+export(wrapAccs.Cat)
+export(wrapAccs.Cont)
 export(writeTile)
 export(writeTiles)
