--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ export(isCont)
 export(mergeLevels)
 export(modelAccs)
 export(modelsValid)
+export(nnErrMap)
 export(npelVIF)
 export(npelVIMP)
 export(plotTile.base)
