--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: NPEL.Classification
 Type: Package
 Title: Classifaction and data-handling routines for NPEL Caribou Project
-Version: 0.3.5
+Version: 0.3.6
 Date: 2015-10-07
 Author: Jonathan Henkelman <jonathan.henkelman@usask.ca>
 Maintainer: Jonathan Henkelman <jonathan.henkelman@usask.ca>
@@ -14,8 +14,7 @@ Depends: R (>= 2.10)
 License: GPL (>= 2)
 LazyData: TRUE
 Imports:
-    raster,
-    sp
+    raster
 Suggests:
     maptools,
     randomForest,
