Fix bugs: - factorValues assumes numeric factor - new factorLevels function to avoid numeric assumption - other assumptions of numeric factor (Model.R) - minor fixes to Plot.R but no major overhaul - documentation for same - testing code for same

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(buildPredict)
 export(classAcc)
 export(deg2rad)
 export(extractPoints)
+export(factorLevels)
 export(factorValues)
 export(fx2vars)
 export(generateModels)
